# mqtt-broker

./: .dockerignore  .gitignore  Dockerfile  acl.txt  docker-compose.yml  init.sh  mosquitto.conf  mqtt_reload_config.sh  passwd.txt  remove_user.sh  set_admin.sh  set_user.sh
web/: entrypoint.sh  pyproject.toml  uwsgi.py
