[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["nixissmtp <nixissmtp@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
